2.5.5 -> 2.5.6:
	- don't compute md5sum on non-file %config objects. (from Jos Vos)
	- check arch only on RPMBUILD_{PREP,BUILD,INSTALL,PACKAGEBINARY}.
	- configure.in: set default value for RPM. (Tim Mooney)
	- add new Epoch: keyword just like Serial:.
	- update Russian translation w man pages.
	- solaris: don't attempt static link. (Tim Mooney)
	- fix: timeCheck in rpm.c should be unsigned long. (Tim Mooney)
	- osf: prov searches only shared libraries. (Tim Mooney)
	- solaris: set PATH in prov/req scripts. (Tim Mooney)
	- fix: ignore modes on symlinks. (Tim Mooney)
	- sub-packages inherit RPMTAG_EPOCH (just like RPMTAG_VERSION/RELEASE).
	- fix off-by-1 alloca that prevented relocating /.
	- add %include (Tom Dyas<tdyas@remus.rutgers.edu>)
	- their must be a { between two % in a query format (unless %% is
	  used)

2.5.4 -> 2.5.5:
	- fix install relocate for prefix=/ (Eugene Kanter).
	- updated cs translation.
	- arch/os compare from install is case insensitive.
	- permit rpm to be built in a sub-directory (--srcdir=DIR).
	- return CPIO_BAD_HEADER instead of exiting. (Scott M. Stone)
	- untranslate "(none)" for auto relocating script wrappers.
	- update and rename Czech (Pavel Makovec <pavelm@terminal.cz>)
	- non-linux arch/os identification (Eugene Kanter).
	- portable mode_t/pid_t typedefs.
	- fix check for trailing / in Prefix:
	- remove 2 character language name assumption.
	- add /usr/lib/rpm/find-lang.sh (W. L. Estes <wlestes@uncg.edu>)
	- miscellaneous portability cruft (Eugene Kanter).
	- Makefile: don't use ln -sf.
	- getOutputFrom(): fix race between last read on pipe and child death
	  (exacerbated in 2.5.4).
	- rpm.spec: create /usr/src/redhat/* in %install.

2.5.3 -> 2.5.4:
	- add Slovak translation (Stanislav Meduna <stano@trillian.eunet.sk>)
	- gettextify rpmMessage/rpmError/fprintf messages.
	- update po files; add cz to catalogs.
	- expand args using popt on pre-rpmReadConfigFiles arg pass.
	- skip arch checks if only packaging source rpm.