@@ -2,6 +2,7 @@
 #define H_BUILD
 
 int build(char *arg, int buildAmount, char *passPhrase,
-	         char *buildRoot, int fromTarball, int test, char *cookie);
+	  char *buildRoot, int fromTarball, int test, char *cookie,
+	  int force);
 
 #endif
