@@ -5,7 +5,7 @@ int parseChangelog(Spec spec);
 int parseDescription(Spec spec);
 int parseFiles(Spec spec);
 int parsePreamble(Spec spec, int initialPackage, int anyarch);
-int parsePrep(Spec spec);
+int parsePrep(Spec spec, int force);
 int parseRequiresConflicts(Spec spec, Package pkg, char *field,
 			   int tag, int index);
 int parseProvidesObsoletes(Spec spec, Package pkg, char *field, int tag);
@@ -14,6 +14,7 @@ int parseScript(Spec spec, int parsePart);
 int parseBuildInstallClean(Spec spec, int parsePart);
 
 int parseSpec(Spec *specp, char *specFile, char *buildRoot,
-	      int inBuildArch, char *passPhrase, char *cookie, int anyarch);
+	      int inBuildArch, char *passPhrase, char *cookie, int anyarch,
+	      int force);
 
 #endif
