@@ -18,7 +18,7 @@ static void setStandardMacros(Spec spec, char *arch, char *os);
 
 int parseSpec(Spec *specp, char *specFile, char *buildRoot,
 	      int inBuildArch, char *passPhrase, char *cookie,
-	      int anyarch)
+	      int anyarch, int force)
 {
     int parsePart = PART_PREAMBLE;
     int initialPackage = 1;
@@ -75,7 +75,7 @@ int parseSpec(Spec *specp, char *specFile, char *buildRoot,
 	    initialPackage = 0;
 	    break;
 	  case PART_PREP:
-	    parsePart = parsePrep(spec);
+	    parsePart = parsePrep(spec, force);
 	    break;
 	  case PART_BUILD:
 	  case PART_INSTALL:
@@ -124,7 +124,7 @@ int parseSpec(Spec *specp, char *specFile, char *buildRoot,
 		    rpmSetMachine(spec->buildArchitectures[x], NULL);
 		    if (parseSpec(&(spec->buildArchitectureSpecs[index]),
 				  specFile, buildRoot, 1,
-				  passPhrase, cookie, anyarch)) {
+				  passPhrase, cookie, anyarch, force)) {
 			spec->buildArchitectureCount = index;
 			freeSpec(spec);
 			return RPMERR_BADSPEC;
